--- a/css/styles.css
+++ b/css/styles.css
@@ -128,6 +128,10 @@ h1, h2, h3, h4, h5, h6 {
 
 
 /* about */
+.about-p, .about-li {
+    font-family: 'Playfair Display', serif;
+    color: rgb(124, 47, 60);
+}
 
 /* news */
 
