--- a/css/styles.css
+++ b/css/styles.css
@@ -137,6 +137,18 @@ h1, h2, h3, h4, h5, h6 {
 
 /* contact */
 
+/* Portfolio */
+
+.img-fluid{
+    position: relative;
+    width: 100%;
+    padding-right: 10px;
+    padding-left: 10px;
+    padding-top: 10px;
+}
+.img-fluid:hover{
+    transform: scale(1.1);
+}
 
 
 
