--- a/css/styles.css
+++ b/css/styles.css
@@ -131,6 +131,21 @@ h1, h2, h3, h4, h5, h6 {
 
 /* news */
 
+.col-news {
+    flex: 1;
+    border: 1p solid black;
+    margin: 10px;
+    padding: 20px;
+    border: 1px solid grey;
+    background-color: #ee746b;
+    color: black;
+}
+
+.col-news input{
+    display: flex;
+    
+    justify-content: center;
+}
 /* contact */
 
 
